fix: Disable text wrap on nav.

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -157,6 +157,8 @@ nav em {
 
 nav a {
     text-decoration: none;
+
+    text-wrap: nowrap;
 }
 
 nav a.active {
